Fixed skills sect. on firefox, etc

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -243,10 +243,12 @@ a.active_lang {
 .hero_socials a {
   display: inline-block;
   margin-right: 5px;
+  padding: 0;
   font-size: 0;
   line-height: 0;
   width: 36px;
   height: 36px;
+  text-align: center;
 }
 
 .hero_socials a:nth-last-child(1) {
@@ -259,6 +261,7 @@ a.active_lang {
   width: 28px;
   height: 28px;
   margin: 4px auto;
+  transform: translateX(-0.5px);
 
 }
 
@@ -336,6 +339,7 @@ a.active_lang {
   height: 100%;
   margin: 0 auto;
   overflow: visible;
+  transition: transform 0.3s ease;
 }
 
 .skills__item_content {
@@ -346,23 +350,23 @@ a.active_lang {
   border-radius: 14px;
 
   box-sizing: border-box;
-  transition: transform 0.3s ease;
+  
 
   pointer-events: none;
   user-select: none;
 }
 
 
-.skills__item:hover .skills__item_content {
+.skills__item:hover {
   transform: scale(1.1)!important; 
 }
 
 
 /* .projects_init .skills__item {
   animation: skill_appear_l3 0.3s ease-in-out both;
-} */
+}
 
-/* @keyframes skill_appear_l3 {
+@keyframes skill_appear_l3 {
   0% {
     transform: translateY(-40px);
     opacity: 0;
@@ -420,10 +424,12 @@ a.active_lang {
 .skills__icon {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 0;
+  right: 0;
+  width: 100%;
   height: 44%;
   max-height: 44px;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
 
   transition: top 0.17s ease-in-out;
   z-index: 10;
@@ -435,8 +441,10 @@ a.active_lang {
 }
 
 .skills__icon svg {
+  display: block;
   width: auto;
   height: 100%;
+  margin: 0 auto;
 }
 
 .skills__item:hover {
